cabal-version: 2.2
author: Taylor Fausak
category: Development
description: Gild formats package descriptions.
extra-doc-files:
  CHANGELOG.md
  README.md

license: MIT
license-file: LICENSE.txt
maintainer: Taylor Fausak
name: cabal-gild
synopsis: Formats package descriptions.
version: 1.0.2.0

source-repository head
  type: git
  location: https://github.com/tfausak/cabal-gild

flag pedantic
  default: False
  manual: True

common library
  build-depends: base ^>=4.17.0.0 || ^>=4.18.0.0 || ^>=4.19.0.0
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

  if impl(ghc >= 9.8)
    ghc-options: -Wno-missing-role-annotations

  if flag(pedantic)
    ghc-options: -Werror

common executable
  import: library
  build-depends: cabal-gild
  ghc-options:
    -rtsopts
    -threaded

library
  import: library
  autogen-modules: Paths_cabal_gild
  build-depends:
    Cabal-syntax ^>=3.8.1.0 || ^>=3.10.1.0,
    bytestring ^>=0.11.3.1 || ^>=0.12.0.2,
    containers ^>=0.6.6,
    directory ^>=1.3.7.1,
    exceptions ^>=0.10.5,
    filepath ^>=1.4.2.2,
    parsec ^>=3.1.16.1,
    pretty ^>=1.1.3.6,
    text ^>=2.0.1 || ^>=2.1,
    transformers ^>=0.5.6.2 || ^>=0.6.1.0,

  -- cabal-gild: discover source/library
  exposed-modules:
    CabalGild.Action.AttachComments
    CabalGild.Action.EvaluatePragmas
    CabalGild.Action.ExtractComments
    CabalGild.Action.FormatFields
    CabalGild.Action.GetCabalVersion
    CabalGild.Action.ReflowText
    CabalGild.Action.RemovePositions
    CabalGild.Action.Render
    CabalGild.Action.StripBlanks
    CabalGild.Class.MonadLog
    CabalGild.Class.MonadRead
    CabalGild.Class.MonadWalk
    CabalGild.Class.MonadWrite
    CabalGild.Exception.CheckFailure
    CabalGild.Exception.InvalidMode
    CabalGild.Exception.InvalidOption
    CabalGild.Exception.ParseError
    CabalGild.Exception.UnexpectedArgument
    CabalGild.Exception.UnknownOption
    CabalGild.Extra.Either
    CabalGild.Extra.Field
    CabalGild.Extra.FieldLine
    CabalGild.Extra.List
    CabalGild.Extra.ModuleName
    CabalGild.Extra.Name
    CabalGild.Extra.SectionArg
    CabalGild.Extra.String
    CabalGild.Main
    CabalGild.Type.Block
    CabalGild.Type.Chunk
    CabalGild.Type.Comment
    CabalGild.Type.Config
    CabalGild.Type.Dependency
    CabalGild.Type.ExeDependency
    CabalGild.Type.Flag
    CabalGild.Type.ForeignLibOption
    CabalGild.Type.Language
    CabalGild.Type.LegacyExeDependency
    CabalGild.Type.Line
    CabalGild.Type.List
    CabalGild.Type.Mode
    CabalGild.Type.ModuleReexport
    CabalGild.Type.PkgconfigDependency
    CabalGild.Type.PkgconfigVersionRange
    CabalGild.Type.Pragma
    CabalGild.Type.Set
    CabalGild.Type.SomeParsecParser
    CabalGild.Type.TestedWith
    CabalGild.Type.VersionRange

  hs-source-dirs: source/library
  other-modules: Paths_cabal_gild

executable cabal-gild
  import: executable
  hs-source-dirs: source/executable
  main-is: Main.hs

test-suite cabal-gild-test-suite
  import: executable
  build-depends:
    bytestring,
    containers,
    exceptions,
    filepath,
    hspec ^>=2.11.7,
    transformers,

  hs-source-dirs: source/test-suite
  main-is: Main.hs
  type: exitcode-stdio-1.0
