cabal-version: 2.2
author: Taylor Fausak
category: Development
description: Gild formats package descriptions.
extra-doc-files:
  CHANGELOG.md
  README.md

license: MIT
license-file: LICENSE.txt
maintainer: Taylor Fausak
name: cabal-gild
synopsis: Formats package descriptions.
version: 1.3.1.3

source-repository head
  type: git
  location: https://github.com/tfausak/cabal-gild

flag pedantic
  default: False
  manual: True

common library
  build-depends: base ^>=4.18.0.0 || ^>=4.19.0.0 || ^>=4.20.0.0
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

  if impl(ghc >=9.8)
    ghc-options: -Wno-missing-role-annotations

  if flag(pedantic)
    ghc-options: -Werror

common executable
  import: library
  build-depends: cabal-gild
  ghc-options:
    -rtsopts
    -threaded

library
  import: library
  autogen-modules: Paths_cabal_gild
  build-depends:
    Cabal-syntax ^>=3.10.1.0 || ^>=3.12.0.0,
    bytestring ^>=0.11.4.0 || ^>=0.12.0.2,
    containers ^>=0.6.7 || ^>=0.7,
    directory ^>=1.3.8.1,
    exceptions ^>=0.10.7,
    filepath ^>=1.4.100.1 || ^>=1.5.2.0,
    parsec ^>=3.1.16.1,
    pretty ^>=1.1.3.6,
    text ^>=2.0.2 || ^>=2.1,
    transformers ^>=0.6.1.0,

  -- cabal-gild: discover source/library
  exposed-modules:
    CabalGild
    CabalGild.Unstable.Action.AttachComments
    CabalGild.Unstable.Action.EvaluatePragmas
    CabalGild.Unstable.Action.ExtractComments
    CabalGild.Unstable.Action.FormatFields
    CabalGild.Unstable.Action.GetCabalVersion
    CabalGild.Unstable.Action.ReflowText
    CabalGild.Unstable.Action.Render
    CabalGild.Unstable.Action.StripBlanks
    CabalGild.Unstable.Class.MonadLog
    CabalGild.Unstable.Class.MonadRead
    CabalGild.Unstable.Class.MonadWalk
    CabalGild.Unstable.Class.MonadWrite
    CabalGild.Unstable.Exception.CheckFailure
    CabalGild.Unstable.Exception.InvalidLeniency
    CabalGild.Unstable.Exception.InvalidMode
    CabalGild.Unstable.Exception.InvalidOption
    CabalGild.Unstable.Exception.ParseError
    CabalGild.Unstable.Exception.SpecifiedOutputWithCheckMode
    CabalGild.Unstable.Exception.SpecifiedStdinWithFileInput
    CabalGild.Unstable.Exception.UnexpectedArgument
    CabalGild.Unstable.Exception.UnknownOption
    CabalGild.Unstable.Extra.ByteString
    CabalGild.Unstable.Extra.CharParsing
    CabalGild.Unstable.Extra.Either
    CabalGild.Unstable.Extra.Field
    CabalGild.Unstable.Extra.FieldLine
    CabalGild.Unstable.Extra.List
    CabalGild.Unstable.Extra.ModuleName
    CabalGild.Unstable.Extra.Name
    CabalGild.Unstable.Extra.SectionArg
    CabalGild.Unstable.Extra.String
    CabalGild.Unstable.Main
    CabalGild.Unstable.Type.Block
    CabalGild.Unstable.Type.Chunk
    CabalGild.Unstable.Type.Comment
    CabalGild.Unstable.Type.Condition
    CabalGild.Unstable.Type.Config
    CabalGild.Unstable.Type.Context
    CabalGild.Unstable.Type.Dependency
    CabalGild.Unstable.Type.ExeDependency
    CabalGild.Unstable.Type.Extension
    CabalGild.Unstable.Type.Flag
    CabalGild.Unstable.Type.ForeignLibOption
    CabalGild.Unstable.Type.Input
    CabalGild.Unstable.Type.Language
    CabalGild.Unstable.Type.LegacyExeDependency
    CabalGild.Unstable.Type.Leniency
    CabalGild.Unstable.Type.Line
    CabalGild.Unstable.Type.List
    CabalGild.Unstable.Type.Mixin
    CabalGild.Unstable.Type.Mode
    CabalGild.Unstable.Type.ModuleReexport
    CabalGild.Unstable.Type.Optional
    CabalGild.Unstable.Type.Output
    CabalGild.Unstable.Type.PkgconfigDependency
    CabalGild.Unstable.Type.PkgconfigVersionRange
    CabalGild.Unstable.Type.Pragma
    CabalGild.Unstable.Type.Set
    CabalGild.Unstable.Type.SomeParsecParser
    CabalGild.Unstable.Type.TestedWith
    CabalGild.Unstable.Type.Variable
    CabalGild.Unstable.Type.VersionRange

  hs-source-dirs: source/library
  other-modules: Paths_cabal_gild

executable cabal-gild
  import: executable
  hs-source-dirs: source/executable
  main-is: Main.hs

test-suite cabal-gild-test-suite
  import: executable
  build-depends:
    bytestring,
    containers,
    directory,
    exceptions,
    filepath,
    hspec ^>=2.11.8,
    temporary ^>=1.3,
    transformers,

  hs-source-dirs: source/test-suite
  main-is: Main.hs
  type: exitcode-stdio-1.0
